--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/styles.css": "/css/styles.css",
-    "/css/admin.css": "/css/admin.css",
+    "/css/app.css": "/css/app.css",
     "/js/bundle.js": "/js/bundle.js",
     "/js/script.js": "/js/script.js",
     "/js/vendor.js": "/js/vendor.js"
